...
            <connections>
                <outlet property="delegate" destination="213" id="1041"/>
            </connections>
        </customObject>
        <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
        <window title="Notational" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" restorable="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" frameAutosaveName="NotationWindow" animationBehavior="default" id="21" userLabel="notation">
            <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
            <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
            <rect key="contentRect" x="280" y="392" width="397" height="464"/>
            <rect key="screenRect" x="0.0" y="0.0" width="1440" height="878"/>
            <value key="minSize" type="size" width="213" height="107"/>
            <view key="contentView" id="2" customClass="ETContentView">
...
                                    </items>
                                </menu>
                            </menuItem>
                        </items>
                    </menu>
                </menuItem>
                <menuItem title="View" tag="99" id="382">
                    <menu key="submenu" title="View" id="383">
                        <items>
                            <menuItem title="Enter Full Screen" tag="314" hidden="YES" enabled="NO" keyEquivalent="f" id="1307">
                                <modifierMask key="keyEquivalentModifierMask" control="YES" command="YES"/>
                                <connections>
                                    <action selector="toggleFullScreen:" target="-1" id="1309"/>
...
                            <menuItem title="Switch to Horizontal Layout" keyEquivalent="l" id="1115">
                                <modifierMask key="keyEquivalentModifierMask" option="YES" command="YES"/>
                                <connections>
                                    <action selector="switchViewLayout:" target="213" id="1117"/>
                                </connections>
                            </menuItem>
                            <menuItem title="Collapse Notes List" keyEquivalent="C" id="1127">
                                <connections>
                                    <action selector="toggleCollapse:" target="213" id="1129"/>
                                </connections>
                            </menuItem>
                            <menuItem title="Color Schemes" id="1210">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <menu key="submenu" title="Color Schemes" id="1211">
                                    <items>
                                        <menuItem title="B/W" state="on" keyEquivalent="1" id="1214">
                                            <modifierMask key="keyEquivalentModifierMask" option="YES" command="YES"/>
                                            <connections>
...
