...
	}
}

- (void)setShowsSignIn:(BOOL)showsSignIn {
    if (!signInButton) {
        signInButton = [[NSButton alloc] initWithFrame:NSMakeRect(0, 0, 170, 32)];
        [signInButton setTitle:NSLocalizedString(@"Sign In to Simplenote…", nil)];
        [signInButton setBezelStyle:NSBezelStyleRounded];
        [signInButton setTarget:NSApp.delegate];
        [signInButton setAction:@selector(showSimplenoteAccount:)];
        [signInButton setAutoresizingMask:NSViewMinXMargin | NSViewMaxXMargin | NSViewMinYMargin | NSViewMaxYMargin];
        [self addSubview:signInButton];
    }
...
