...
}

- (id)init {
	NSWindow *window = [[NSWindow alloc] initWithContentRect:NSMakeRect(0, 0, 440, 210)
													styleMask:NSWindowStyleMaskTitled | NSWindowStyleMaskClosable
													  backing:NSBackingStoreBuffered defer:YES];
	[window setTitle:NSLocalizedString(@"Simplenote Account", nil)];
	[window setReleasedWhenClosed:NO];
	if ((self = [super initWithWindow:window])) {
		NSView *content = [window contentView];

		messageLabel = Label(NSMakeRect(20, 130, 400, 60));
		[content addSubview:messageLabel];
...
